// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavTabCarousel /> with links prop matches with snapshot 1`] = `
<div
  className="sc-dnqmqq kyrEyT"
>
  <div
    className="sc-bxivhb dpfxZU"
  >
    <svg
      className="sc-ifAKCX jyHSSs"
      fill="var(--color-font1)"
      height="5.64"
      style={
        Object {
          "transform": "rotate(-90deg)",
        }
      }
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
    <div
      className="sc-EHOje Cpfri"
    >
      Foobar 1
    </div>
  </div>
  <div
    className="sc-htoDjs dBedLo"
  >
    <a
      className="sc-gzVnrw deRiKy"
      href="http://www.google.com"
    />
    <a
      className="sc-gzVnrw cdBter"
      href="http://www.cowboybebop.com"
    />
    <a
      className="sc-gzVnrw deRiKy"
      href="http://www.starwars.com"
    />
  </div>
  <div
    className="sc-htpNat eMWHOL"
  >
    <div
      className="sc-bZQynM hJDVrx"
    >
      Foobar 2
    </div>
    <svg
      className="sc-ifAKCX jyHSSs"
      fill="var(--color-font1)"
      height="5.64"
      style={
        Object {
          "transform": "rotate(90deg)",
        }
      }
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
  </div>
</div>
`;

exports[`<NavTabCarousel /> with totalIndex prop matches with snapshot 1`] = `
<div
  className="sc-dnqmqq kyrEyT"
>
  <div
    className="sc-bxivhb dpfxZU"
  >
    <svg
      className="sc-ifAKCX jyHSSs"
      fill="var(--color-font1)"
      height="5.64"
      style={
        Object {
          "transform": "rotate(-90deg)",
        }
      }
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
    <div
      className="sc-EHOje Cpfri"
    >
      Foobar 1
    </div>
  </div>
  <div
    className="sc-htoDjs dBedLo"
  >
    <div
      className="sc-gzVnrw deRiKy"
    />
    <div
      className="sc-gzVnrw cdBter"
    />
    <div
      className="sc-gzVnrw deRiKy"
    />
  </div>
  <div
    className="sc-htpNat eMWHOL"
  >
    <div
      className="sc-bZQynM hJDVrx"
    >
      Foobar 2
    </div>
    <svg
      className="sc-ifAKCX jyHSSs"
      fill="var(--color-font1)"
      height="5.64"
      style={
        Object {
          "transform": "rotate(90deg)",
        }
      }
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
  </div>
</div>
`;
